[tool.poetry]
name = "color-meter"
version = "0.1.0"
description = "A tool to measure the color of the pixel under the cursor"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.53"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"